--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #f8f8f8;
+  background-color: #3c82c4;
   height: 150px;
   padding: 20px;
   color: #3d464d;
