--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,14 @@ footer {
   text-align: center;
   color: white;
   width: 100%;
-  bottom: 0;
+  bottom: 1;
   padding-bottom: 10px;
-  position: fixed;
+  position: relative;
 }
 
 footer a:active {
-    color: orange;
+  color: orange;
 }
 footer a:visited {
-    color: silver;
+  color: silver;
 }
